# Mini-PharmaMind

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose_dev.yaml  docker-composedb.yaml  package.json  pyproject.toml  setup.sh
agents/: __init__.py  critique.py  drug_search.py  report.py  target_search.py
config/: llm_client.py  sytem_prompts.py
orcastration/: main_chainlit.py
prisma/: schema.prisma
tests/: README.md
tests/test_tools/: test_opentargets_tool.py
tools/: tool_call.py
utilities/: chembl.py  opentargets_tool.py  pubmed_tool.py  save_pdf.py
